--- a/buszy/menu.html
+++ b/buszy/menu.html
@@ -3,7 +3,12 @@
 
 <head>
     <meta charset="UTF-8">
-    <script>if(localStorage.getItem('dark-mode')==='enabled'){document.documentElement.classList.add('dark-mode');document.documentElement.style.background='#121521';}</script>
+    <script>
+        if (localStorage.getItem('dark-mode') === 'enabled') {
+            document.documentElement.classList.add('dark-mode');
+            document.documentElement.style.background = '#121521';
+        }
+    </script>
     <meta name="description" content="">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="google-site-verification" content="57TuruPNu5wqSSia_cUehl5t9Gh1AbxrHNPcMiFx-aQ" />
@@ -26,7 +31,10 @@
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-WN76281P3Q"></script>
     <script>
         window.dataLayer = window.dataLayer || [];
-        function gtag() { dataLayer.push(arguments); }
+
+        function gtag() {
+            dataLayer.push(arguments);
+        }
         gtag('js', new Date());
 
         gtag('config', 'G-WN76281P3Q');
@@ -378,7 +386,7 @@
     <script type="text/javascript" id="cookiebanner" src="../js/cookies-banner.js" data-position="bottom"
         data-bg="#f2f3e5" data-fg="#000" data-font-family="Onest, sans-serif" data-zindex="12345111111"
         data-message="This website uses cookies to provide necessary site functionality and to improve your experience. By using this website, you agree to our use of cookies.">
-        </script>
+    </script>
 
 
     <script src="js/mob-navtabs.js"></script>
