--- a/rail-buddy/first-last.html
+++ b/rail-buddy/first-last.html
@@ -3,7 +3,12 @@
 
 <head>
     <meta charset="UTF-8">
-    <script>if(localStorage.getItem('dark-mode')==='enabled'){document.documentElement.classList.add('dark-mode');document.documentElement.style.background='#121521';}</script>
+    <script>
+        if (localStorage.getItem('dark-mode') === 'enabled') {
+            document.documentElement.classList.add('dark-mode');
+            document.documentElement.style.background = '#121521';
+        }
+    </script>
     <meta name="description" content="">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="google-site-verification" content="57TuruPNu5wqSSia_cUehl5t9Gh1AbxrHNPcMiFx-aQ" />
@@ -26,7 +31,10 @@
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-WN76281P3Q"></script>
     <script>
         window.dataLayer = window.dataLayer || [];
-        function gtag() { dataLayer.push(arguments); }
+
+        function gtag() {
+            dataLayer.push(arguments);
+        }
         gtag('js', new Date());
 
         gtag('config', 'G-WN76281P3Q');
@@ -108,17 +116,18 @@
 
         .direction-card {
             border: 1px solid #ddd;
-            border-radius: 8px;
-            padding: 20px;
-            background: #f9f9f9;
+            border-radius: 25px;
+            padding: 1rem;
+            background-color: #f5f5f5;
+            box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
             transition: all 0.3s;
             margin-bottom: 1em;
             margin-top: 1em;
         }
 
         .direction-card:hover {
-            box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
-            border-color: #607d96;
+            transform: translateY(-2px);
+            box-shadow: 0 12px 30px rgba(0, 0, 0, 0.15);
         }
 
         .direction-header {
@@ -385,7 +394,7 @@
         }
 
         body.dark-mode .direction-card {
-            background: #2d3242;
+            background: #292d3d;
             border: 1px solid #2b2b2b33;
             box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.233), 0 4px 12px rgba(0, 0, 0, 0.1);
         }
@@ -684,7 +693,7 @@
     <script type="text/javascript" id="cookiebanner" src="../js/cookies-banner.js" data-position="bottom"
         data-bg="#f2f3e5" data-fg="#000" data-font-family="Onest, sans-serif" data-zindex="12345111111"
         data-message="This website uses cookies to provide necessary site functionality and to improve your experience. By using this website, you agree to our use of cookies.">
-        </script>
+    </script>
 
 
 
