2026-03 Feature Update for worksbynrfz

--- a/buszy/first-last.html
+++ b/buszy/first-last.html
@@ -691,9 +691,9 @@
                         --
                     </div>
                 </div>
-                <div class="bus-stop-subtitle" id="busStopSubtitle">
+                <!-- <div class="bus-stop-subtitle" id="busStopSubtitle">
                     Select a bus stop to begin
-                </div>
+                </div> -->
                 <div class="services-grid" id="servicesContainer"></div>
             </div>
         </div>
