--- a/buszy/first-last.html
+++ b/buszy/first-last.html
@@ -682,7 +682,7 @@
             <div class="content-section" id="contentSection">
                 <div class="bus-stop-info">
                     <div class="bus-stop-code">
-                        <img alt="bus icon" src="assets/icon-512.png" />
+                        <img alt="bus icon" src="assets/bus-icon.png" />
                         <span class="bus-stop-code-text" id="busStopCode">
                             --
                         </span>
