--- a/buszy/first-last.html
+++ b/buszy/first-last.html
@@ -12,7 +12,7 @@
     <meta content="IE=edge" http-equiv="X-UA-Compatible" />
     <meta content="57TuruPNu5wqSSia_cUehl5t9Gh1AbxrHNPcMiFx-aQ" name="google-site-verification" />
     <meta content="width=device-width, initial-scale=1, shrink-to-fit=no" name="viewport" />
-    <title>First & Last Bus Timings | Buszy</title>
+    <title>First & Last Bus | Buszy</title>
     <meta content name="description" />
     <meta content name="keywords" />
     <meta content="https://i.imgur.com/i8n9KYs.png" property="og:image" />
