--- a/buszy/menu.html
+++ b/buszy/menu.html
@@ -335,7 +335,7 @@
                 <a href="first-last.html" class="list-group-item list-group-item-action flex-column align-items-start">
                     <div class="d-flex">
                         <div>
-                            <h5 class="lg-menu"><i class="fa-regular fa-clock"></i> First &amp; Last Bus Timings</h5>
+                            <h5 class="lg-menu"><i class="fa-regular fa-clock"></i> First &amp; Last Bus</h5>
                         </div>
                     </div>
                 </a>
@@ -377,7 +377,7 @@
             <hr>
 
             <div style="text-align: center; color: gray; font-size: 14px; margin-top: 1em; margin-bottom: 2em;">
-                Version 3.1.20 (2305)
+                Version 3.1.22 (2007)
             </div>
         </div>
     </section>
