--- a/buszy.html
+++ b/buszy.html
@@ -7,22 +7,14 @@
     <meta name="description" content="">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="google-site-verification" content="57TuruPNu5wqSSia_cUehl5t9Gh1AbxrHNPcMiFx-aQ" />
-    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=5, viewport-fit=cover, shrink-to-fit=no">
-    <meta name="mobile-web-app-capable" content="yes">
-    <meta name="apple-mobile-web-app-capable" content="yes">
-    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
-    <meta name="apple-mobile-web-app-title" content="Buszy">
-    <meta name="theme-color" content="#121521" media="(prefers-color-scheme: light)">
-    <meta name="theme-color" content="#0d0f15" media="(prefers-color-scheme: dark)">
-    <meta name="msapplication-TileColor" content="#121521">
-    <meta name="msapplication-navbutton-color" content="#121521">
-    
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>Pinned Bus Stops | Buszy</title>
+    <meta content="" name="description">
     <meta content="" name="keywords">
     <meta property="og:image" content="https://i.imgur.com/i8n9KYs.png" />
 
     <link rel="manifest" href="manifest.json">
-    <link rel="apple-touch-icon" href="./img/core-img/icon-192.png">
+    <meta name="theme-color" content="#121521">
 
     <link rel="icon" href="img/core-img/favicon.png">
 
