--- a/buszy.html
+++ b/buszy.html
@@ -12,9 +12,15 @@
     <meta content="" name="description">
     <meta content="" name="keywords">
     <meta property="og:image" content="https://i.imgur.com/i8n9KYs.png" />
+    <meta name="description" content="Real-time bus timings, alerts, and pinned bus stops for Singapore buses">
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+    <meta name="apple-mobile-web-app-title" content="Buszy">
 
-    <link rel="manifest" href="manifest.json">
-    <meta name="theme-color" content="#121521">
+    <link rel="manifest" href="buszy/manifest.json">
+    <link rel="icon" href="img/core-img/icon-192.png" type="image/png">
+    <link rel="apple-touch-icon" href="img/core-img/icon-192.png">
+    <meta name="theme-color" content="#007bff">
 
     <link rel="icon" href="img/core-img/favicon.png">
 
@@ -269,6 +275,8 @@
     <script src="js/dstabs.js"></script>
 
     <script src="js/utils.js"></script>
+
+    <script src="js/pwa-helper.js"></script>
 
     <script src="buszy/js/buszy-main.js"></script>
 
