--- a/rail-buddy.html
+++ b/rail-buddy.html
@@ -12,9 +12,15 @@
     <meta content="" name="description">
     <meta content="" name="keywords">
     <meta property="og:image" content="https://i.imgur.com/i8n9KYs.png" />
+    <meta name="description" content="Real-time train line status, delays, and schedules for Singapore MRT and LRT networks">
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+    <meta name="apple-mobile-web-app-title" content="RailBuddy">
 
-    <link rel="manifest" href="manifest.json">
-    <meta name="theme-color" content="#121521">
+    <link rel="manifest" href="rail-buddy/manifest.json">
+    <link rel="icon" href="rail-buddy/assets/icon-512.png" type="image/png">
+    <link rel="apple-touch-icon" href="rail-buddy/assets/icon-512.png">
+    <meta name="theme-color" content="#007bff">
 
     <link rel="icon" href="rail-buddy/assets/icon-512.png">
 
@@ -332,21 +338,23 @@
 
     <script src="rail-buddy/tdt-subp.js"></script>
 
-    <script src="../js/jquery.min.js"></script>
+    <script src="js/jquery.min.js"></script>
 
-    <script src="../js/popper.min.js"></script>
+    <script src="js/popper.min.js"></script>
 
-    <script src="../js/bootstrap.min.js"></script>
+    <script src="js/bootstrap.min.js"></script>
 
-    <script src="../js/pw.bundle.js"></script>
+    <script src="js/pw.bundle.js"></script>
 
-    <script src="../js/default-assets/active.js"></script>
+    <script src="js/default-assets/active.js"></script>
 
-    <script src="../js/isotope.pkgd.min.js"></script>
+    <script src="js/isotope.pkgd.min.js"></script>
 
-    <script src="../js/dstabs.js"></script>
+    <script src="js/dstabs.js"></script>
 
-    <script src="../js/utils.js"></script>
+    <script src="js/utils.js"></script>
+
+    <script src="js/pwa-helper.js"></script>
 
     <script src="rail-buddy/js/tsa.js"></script>
 
