Fix app separation: replace old SW, clean up caches, add migration script

--- a/buszy/index.html
+++ b/buszy/index.html
@@ -272,6 +272,8 @@
 
         <script src="/js/pwa-helper.js"></script>
 
+        <script src="/js/pwa-migration.js"></script>
+
         <script src="/buszy/js/buszy-main.js"></script>
 
         <script>
