--- a/rail-buddy/index.html
+++ b/rail-buddy/index.html
@@ -353,6 +353,8 @@
 
     <script src="/js/pwa-helper.js"></script>
 
+    <script src="/js/pwa-migration.js"></script>
+
     <script src="/rail-buddy/js/tsa.js"></script>
 
     <script>
