Fix paths for GitHub Pages: add dynamic PWA config, use relative paths

--- a/buszy/index.html
+++ b/buszy/index.html
@@ -17,18 +17,18 @@
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
     <meta name="apple-mobile-web-app-title" content="Buszy">
 
-    <link rel="manifest" href="/buszy/manifest.json">
-    <link rel="icon" href="/buszy/assets/icon-192.png" type="image/png">
-    <link rel="apple-touch-icon" href="/buszy/assets/icon-192.png">
+    <link rel="manifest" href="./manifest.json">
+    <link rel="icon" href="./assets/icon-192.png" type="image/png">
+    <link rel="apple-touch-icon" href="./assets/icon-192.png">
     <meta name="theme-color" content="#007bff">
 
     <link rel="stylesheet" href="https://site-assets.fontawesome.com/releases/v7.0.0/css/all.css" />
 
-    <link rel="stylesheet" href="/css/style.css">
-    <link rel="stylesheet" href="/css/pwa-styles.css">
-    <link rel="stylesheet" href="/buszy/css/style-buszy.css">
-    <link rel="stylesheet" href="/css/style-breakpoints.css">
-    <link rel="stylesheet" href="/css/dark-mode.css">
+    <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="../css/pwa-styles.css">
+    <link rel="stylesheet" href="./css/style-buszy.css">
+    <link rel="stylesheet" href="../css/style-breakpoints.css">
+    <link rel="stylesheet" href="../css/dark-mode.css">
 
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-WN76281P3Q"></script>
@@ -154,7 +154,7 @@
     <nav class="navbar-container">
         <div class="navbar">
             <!-- Logo -->
-            <a href="/buszy/"><img src="/buszy/assets/logo.png" alt="logo" class="logo" /></a>
+            <a href="./"><img src="./assets/logo.png" alt="logo" class="logo" /></a>
 
             <!-- Navigation Links -->
             <ul class="navbar-nav" id="navbarNav">
@@ -165,19 +165,19 @@
                     </a>
                 </li>
                 <li class="nav-item">
-                    <a href="/buszy/nbs.html" class="nav-link">
+                    <a href="./nbs.html" class="nav-link">
                         <i class="fa-regular fa-location-dot"></i>
                         <span>Nearby</span>
                     </a>
                 </li>
                 <li class="nav-item">
-                    <a href="/buszy/abs.html" class="nav-link">
+                    <a href="./abs.html" class="nav-link">
                         <i class="fa-regular fa-magnifying-glass"></i>
                         <span>Search</span>
                     </a>
                 </li>
                 <li class="nav-item ">
-                    <a href="/buszy/menu.html" class="nav-link">
+                    <a href="./menu.html" class="nav-link">
                         <i class="fa-regular fa-bars"></i>
                         <span>Menu</span>
                     </a>
@@ -198,7 +198,7 @@
                 </a>
             </li>
             <li>
-                <a href="/buszy/nbs.html">
+                <a href="./nbs.html">
                     <span class="icon">
                         <i class="fa-regular fa-location-dot"></i>
                     </span>
@@ -206,7 +206,7 @@
                 </a>
             </li>
             <li>
-                <a href="/buszy/abs.html">
+                <a href="./abs.html">
                     <span class="icon">
                         <i class="fa-regular fa-magnifying-glass"></i>
                     </span>
@@ -214,7 +214,7 @@
                 </a>
             </li>
             <li>
-                <a href="/buszy/menu.html">
+                <a href="./menu.html">
                     <span class="icon">
                         <i class="fa-regular fa-bars"></i>
                     </span>
@@ -246,38 +246,40 @@
         </section>
         </main>
 
-        <script type="text/javascript" id="cookiebanner" src="/js/cookies-banner.js" data-position="bottom" data-bg="#f2f3e5"
+        <script type="text/javascript" id="cookiebanner" src="../js/cookies-banner.js" data-position="bottom" data-bg="#f2f3e5"
             data-fg="#000" data-font-family="Onest, sans-serif" data-zindex="12345111111"
             data-message="This website uses cookies to provide necessary site functionality and to improve your experience. By using this website, you agree to our use of cookies.">
         </script>
 
-        <script src="/buszy/js/mob-navtabs.js"></script>
+        <script src="./js/mob-navtabs.js"></script>
 
-        <script src="/buszy/buszy.js"></script>
+        <script src="./buszy.js"></script>
 
-        <script src="/js/jquery.min.js"></script>
+        <script src="../js/jquery.min.js"></script>
 
-        <script src="/js/popper.min.js"></script>
+        <script src="../js/popper.min.js"></script>
 
-        <script src="/js/bootstrap.min.js"></script>
+        <script src="../js/bootstrap.min.js"></script>
 
-        <script src="/js/pw.bundle.js"></script>
+        <script src="../js/pw.bundle.js"></script>
 
-        <script src="/js/default-assets/active.js"></script>
+        <script src="../js/default-assets/active.js"></script>
 
-        <script src="/js/isotope.pkgd.min.js"></script>
+        <script src="../js/isotope.pkgd.min.js"></script>
 
-        <script src="/js/dstabs.js"></script>
+        <script src="../js/dstabs.js"></script>
 
-        <script src="/js/utils.js"></script>
+        <script src="../js/utils.js"></script>
 
-        <script src="/js/pwa-migration.js"></script>
+        <script src="../js/pwa-config.js"></script>
 
-        <script src="/js/pwa-helper.js"></script>
+        <script src="../js/pwa-helper.js"></script>
 
-        <script src="/buszy/js/pwa-init.js"></script>
+        <script src="../js/pwa-migration.js"></script>
 
-        <script src="/buszy/js/buszy-main.js"></script>
+        <script src="./js/pwa-init.js"></script>
+
+        <script src="./js/buszy-main.js"></script>
 
 </body>
 
