Fix PWA initialization and image path errors
- Changed PWAConfig from const to window.PWAConfig for global accessibility
- Fixed deprecated apple-mobile-web-app-capable meta tag warnings
- Corrected background image paths in buszy/index.html and buszy/buszy.js
- Fixed bus-icon.png path in buszy/js/buszy-main.js
- Images now correctly point to ../img/bg-img/ directory
- All 404 image errors should now be resolved

--- a/buszy/index.html
+++ b/buszy/index.html
@@ -13,6 +13,7 @@
     <meta content="" name="keywords">
     <meta property="og:image" content="https://i.imgur.com/i8n9KYs.png" />
     <meta name="description" content="Real-time bus timings, alerts, and pinned bus stops for Singapore buses">
+    <meta name="mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
     <meta name="apple-mobile-web-app-title" content="Buszy">
@@ -44,7 +45,7 @@
 
 <style>
     #cv-bat {
-        background-image: url("/buszy/assets/bg-img/hero-buszy.png");
+        background-image: url("../img/bg-img/hero-buszy.png");
         height: 50vh;
     }
 
@@ -117,7 +118,7 @@
 
     @media (max-width: 545px) {
         #cv-bat {
-            background-image: url("/buszy/assets/bg-img/hero-buszy.png");
+            background-image: url("../img/bg-img/hero-buszy.png");
             height: 35vh;
         }
 
