--- a/rail-buddy/index.html
+++ b/rail-buddy/index.html
@@ -13,6 +13,7 @@
     <meta content="" name="keywords">
     <meta property="og:image" content="https://i.imgur.com/i8n9KYs.png" />
     <meta name="description" content="Real-time train line status, delays, and schedules for Singapore MRT and LRT networks">
+    <meta name="mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
     <meta name="apple-mobile-web-app-title" content="RailBuddy">
