Fix navigation-related 404 image errors in Buszy
Problem: Images loaded fine initially but returned 404 when navigating to other pages and back
- Relative paths don't work correctly when navigating between pages
- Root cause: Path resolution changes based on current page location

Solution: Use absolute paths with PWAConfig.basePath:
- buszy/index.html: Set background images via inline script after PWAConfig loads
- buszy/buszy.js: Use PWAConfig.basePath for dark mode background updates
- buszy/js/buszy-main.js: Fixed bus icon path using PWAConfig
- buszy/js/abs.js: Fixed bus icon path using PWAConfig
- buszy/js/art.js: Fixed bus icon path using PWAConfig
- buszy/js/pinned.js: Fixed bus icon path using PWAConfig
- buszy/js/nbs.js: Fixed bus icon path using PWAConfig
- buszy/first-last.html: Added script to set image src with PWAConfig

All image references now use correct base path for both GitHub Pages (/nrfz-dev/) and Heroku (/) deployments

--- a/buszy/first-last.html
+++ b/buszy/first-last.html
@@ -682,7 +682,7 @@
             <div class="content-section" id="contentSection">
                 <div class="bus-stop-info">
                     <div class="bus-stop-code">
-                        <img alt="bus icon" src="assets/bus-icon.png" />
+                        <img alt="bus icon" src="assets/bus-icon.png" class="bus-icon-img" />
                         <span class="bus-stop-code-text" id="busStopCode">
                             --
                         </span>
@@ -724,6 +724,17 @@
     <script src="../js/isotope.pkgd.min.js"></script>
     <script src="../js/dstabs.js"></script>
     <script src="../js/utils.js"></script>
+    <script src="../js/pwa-config.js"></script>
+    <script>
+        // Fix image paths for GitHub Pages and Heroku compatibility
+        document.addEventListener('DOMContentLoaded', () => {
+            const busIconImg = document.querySelector('.bus-icon-img');
+            if (busIconImg && window.PWAConfig) {
+                const basePath = window.PWAConfig.basePath;
+                busIconImg.src = basePath + 'buszy/assets/bus-icon.png';
+            }
+        });
+    </script>
     <script src="js/fl-bus.js"></script>
 </body>
 </html>
