Refactor navigation: Fix all broken 404 links
Major fixes:
- Fixed all navigation links from ../buszy.html to ./ (main index page)
  Problem: ../buszy.html tried to access non-existent file at root level
  Solution: Use ./ to link to current app's index page

- Fixed settings link in buszy-main.js from buszy/settings.html to ./settings.html
  Problem: Incorrect path when already in buszy folder
  Solution: Use relative path to settings.html

- Fixed URL construction in buszy-main.js to use PWAConfig.basePath
  Problem: new URL('art.html', origin) didn't account for GitHub Pages /nrfz-dev/
  Solution: Build absolute URL with correct base path for both deployments

- Fixed link selector in nbs.js
  Problem: Looking for href='buszy.html' that doesn't exist
  Solution: Updated to look for href='./' or href='index.html'

These changes fix all navigation 404 errors across Buszy pages:
- index.html (Pinned)
- nbs.html (Nearby)
- abs.html (Search)
- art.html (Bus Stop Details)
- first-last.html (First/Last Bus Timings)
- menu.html (Menu)
- settings.html (Settings)

--- a/buszy/ann.html
+++ b/buszy/ann.html
@@ -91,7 +91,7 @@
         <nav aria-label="breadcrumb" style="margin-bottom:0;">
             <ol class="breadcrumb breadcrumb-fixed" id="floating-breadcrumb">
                 <li class="breadcrumb-item">
-                    <a href="../buszy.html">
+                    <a href="./">
                         <i class="fa-regular fa-house"></i>
                     </a>
                 </li>
@@ -107,12 +107,12 @@
     <nav class="navbar-container">
         <div class="navbar">
             <!-- Logo -->
-            <a href="../buszy.html"><img src="assets/logo.png" alt="logo" class="logo" /></a>
+            <a href="./"><img src="assets/logo.png" alt="logo" class="logo" /></a>
 
             <!-- Navigation Links -->
             <ul class="navbar-nav" id="navbarNav">
                 <li class="nav-item">
-                    <a href="../buszy.html" class="nav-link">
+                    <a href="./" class="nav-link">
                         <i class="fa-sharp fa-regular fa-thumbtack-angle"></i>
                         <span>Pinned</span>
                     </a>
@@ -144,7 +144,7 @@
     <nav class="mobile-bottom-nav">
         <ul>
             <li>
-                <a href="../buszy.html">
+                <a href="./">
                     <span class="icon">
                         <i class="fa-sharp fa-regular fa-thumbtack-angle"></i>
                     </span>
@@ -191,7 +191,7 @@
                         <nav aria-label="breadcrumb" class="breadcrumb-desktop" style="display:none;">
                             <ol class="breadcrumb">
                                 <li class="breadcrumb-item">
-                                    <a href="../buszy.html">
+                                    <a href="./">
                                         <i class="fa-regular fa-house"></i>
                                     </a>
                                 </li>
