--- a/buszy/abs.html
+++ b/buszy/abs.html
@@ -327,6 +327,8 @@
 
     <script src="../js/utils.js"></script>
 
+    <script src="../js/pwa-config.js"></script>
+
     <script src="js/abs.js"></script>
 
 </body>
