--- a/buszy/nbs.html
+++ b/buszy/nbs.html
@@ -361,6 +361,8 @@
 
     <script src="../js/utils.js"></script>
 
+    <script src="../js/pwa-config.js"></script>
+
     <script src="js/nbs.js"></script>
 
 
